<resources>
    <string name="app_name">Raj AAAngan</string>
    <string name="app_name_home">AAAngan</string>
    <string name="menu_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="welcome_text">Welcome to Raj AAAngan</string>
    <string name="public_text">Public</string>
    <string name="setup_text">Set up Password</string>
    <string name="confirm_text">Confirm password</string>
    <string name="generate_text">Password</string>
    <string name="login_txt">LOGIN</string>
    <string name="awc_id">Anganwadi Centre ID</string>
    <string name="fatherhusband_name">Father/Husband Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="name">Name</string>
    <string name="dob_text">Date of birth</string>
    <string name="select_finincial_year">Enter Financial Year :</string>
    <string name="generate_salary_slip">Generate Honorarium Slip</string>
    <string name="employment_status">Employment Status</string>
    <string name="doj_text">Date of Joining</string>
    <string name="designation">Designation</string>
    <string name="payslab_amount">Honorarium Amount</string>
    <string name="qualification">Qualification</string>
    <string name="branch_code">Branch Code</string>
    <string name="branch_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch_address">Branch Address</string>
    <string name="bank_ac_no">Bank Account Number</string>
    <string name="aadhar_acc_no">Aadhar Attached Bank Account Number</string>
    <string name="pan_card_no">PAN Card Number</string>
    <string name="bhamasha_no">Bhamashah Number</string>
    <string name="aadhar_no">Aadhar Number</string>
    <string name="asha_id">Asha ID</string>
    <string name="janaadhar_no">Janaadhar Number</string>
    <string name="janaadhar_self_no">Self Janaadhar Number</string>
    <string name="enter_number">Enter registered mobile number</string>
    <string name="required_field">Required Field</string>
    <string name="phone_verification">Let\'s get your \n Mobile Verified</string>
    <string name="phone_verification_text">Enter your phone number \n to receive the code</string>
    <string name="continue_text">Continue</string>
    <string name="admin_text"> RajAangan Administration</string>
    <string name="user_text">Raj Aangan Anganwadi Worker</string>
    <string name="otp_txt">Verifying your code</string>
    <string name="validate_text">Validate OTP</string>
    <string name="country_code">+91</string>
    <string name="your_info_is_safe_text">Your information is safe with us</string>
    <string name="preferred_language">Choose your preferred language</string>
    <string name="preferred_languagee">Choose your preferred language</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="you_can_change_text">You can change the language later on</string>
    <string name="sms_code_sent_text">SMS verification code has been sent to +91%1$s</string>
    <string name="profile_details">Profile Details</string>
    <string name="job_details">Job Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="card_details">Identity Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="employee_id">Employee ID</string>
    <string name="download">Download</string>
    <string name="awc_name">Anganwadi Centre Name</string>
    <string name="awc_address">Anganwadi Centre Address</string>
    <string name="retired">Retired</string>
    <string name="employed">Working</string>
    <string name="view_aaganwadi_data">View Aaganwadi Data</string>
    <string name="aaganwadi_data">Raj Aangan Aaganwadi Data</string>
    <string name="unregistered_aaganwadi_data">Raj Aangan Aaganwadi Unregistered Employees Data</string>
    <string name="registered_aaganwadi_data">Raj Aangan Aaganwadi Registered Employees Data</string>
    <string name="show_kpi">Raj Aangan Upyogkarta Data</string>
    <string name="payment_data">View Payment Data</string>
    <string name="error_in_fetch_data">Error in fetch data</string>
    <string name="view_users_data">View Users Data</string>
    <string name="view_infra_data">View Infrastructure Data</string>
    <string name="enter_employee_id">Enter Employee ID:</string>
    <string name="get_payment_details">Get Payment Details</string>
    <string name="change_your_language">Change your language</string>
    <string name="enter_financial_year">Enter Financial Year:</string>
    <string name="from_year">fromYear</string>
    <string name="toYear">toYear</string>
    <string name="fill_required_fields">Please fill required fields</string>
    <string name="should_have_4_digits">Should have 4 digits</string>
    <string name="download_salary_slip">Download Salary Slip</string>
    <string name="logout">LOG OUT</string>
    <string name="no_app_available_to_view_pdf">No Application available to view PDF</string>
    <string name="enter_your_password">Enter your password here</string>
    <string name="login_with_your_password">Log In with your password</string>
    <string name="password_guidelines">Password should have at least 8 characters</string>
    <string name="password_guidelines1">A mixture of both uppercase and lowercase letters</string>
    <string name="password_guidelines2">A mixture of letters and numbers</string>
    <string name="password_guidelines3">Inclusion of at least one special character, e.g., ! @ # ? ]</string>
    <string name="password_doesnt_match">Password does not match</string>
    <string name="follow_password_guidlines">Please follow password guidelines</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="building_details">Building Details</string>
    <string name="public_infrastructure">Public Infrastructure</string>
    <string name="add_building_details">Submit Building Details</string>
    <string name="district">District</string>
    <string name="project">Project</string>
    <string name="select_facilities_txt">Select available facilities in your building</string>
    <string name="open_area">Open Area</string>
    <string name="toilet">Toilet</string>
    <string name="submit_btn">Submit</string>
    <string name="year">Year</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="electricity">Electricity</string>
    <string name="kitchen">Kitchen</string>
    <string name="sector">Sector</string>
    <string name="property_type">Property Type</string>
    <string name="Commercial">Commercial</string>
    <string name="residential">"Residential "</string>
    <string name="others">Others</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="infra_data">Raj Aangan Anganwadi Infrastructure Details</string>
    <string name="personal_data">Personal details</string>
    <string name="call">Call</string>
    <string name="email">E-Mail</string>
    <string name="district_wise_reg_users">Raj Aangan District Wise Registered Users</string>
    <string name="district_wise_unreg_users">Raj Aangan District Wise UnRegistered Users</string>
    <string name="project_wise_reg_users">Raj Aangan Project Wise Registered Users</string>
    <string name="project_wise_unreg_users">Raj Aangan Project Wise UnRegistered Users</string>
    <string name="enter_valid_otp">Please enter valid OTP</string>
    <string name="otp_verified">OTP Verified Successfully</string>
    <string name="otp_not_received">Not Received Yet?</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="time_remain">Resend in</string>
    <string name="time_remaining">%02d:%02d</string>
    <string name="log_out">Log out</string>
    <string name="logout_success">Logout successfully</string>
    <string name="exit_text">Are you sure you want to exit?</string>
    <string name="next_financial_year">Financial year can not be greater than current financial year</string>
    <string name="previous_financial_year">Financial year can not be less than 2015</string>
    <string name="sr_no">Sr. No.</string>
    <string name="bil_name">Bill Name</string>
    <string name="payment_month">Payment Month</string>
    <string name="amount">Amount (Rs.)</string>
    <string name="item_name">Item Name</string>
    <string name="session">Session Timeout.</string>
    <string name="beneficiary_criteria">Beneficiary Criteria</string>
    <string name="fill_required_field">Enter any one of the beneficiary details</string>
    <string name="view_beneficiary_details">Beneficiary Details</string>
    <string name="search">Search</string>
    <string name="enter_beneficiary_details">Enter any one of the beneficiary details:</string>
    <string name="or_end">OR/AND</string>
    <string name="edit">Edit</string>
    <string name="retry">Try Again</string>
    <string name="update_beneficiary_mapping_master">Verify Beneficiary  Details</string>
    <string name="pcts_anm_id">PCTS ANM ID</string>
    <string name="pcts_asha_id">PCTS ASHA ID</string>
    <string name="mother_name_id">Mother Name/ ID</string>
    <string name="mother_details">Mother Details</string>
    <string name="category_details">Category Details</string>
    <string name="id_card_details">ID Cards Details</string>
    <string name="infant_details">Infant Details</string>
    <string name="basic_info">Basic Information</string>
    <string name="aanganwadi_center">Anganwadi Centre</string>
    <string name="beneficiary_type">Beneficiary Type</string>
    <string name="mother_name">Mother Name</string>
    <string name="age_of_mother">Age of mother</string>
    <string name="height_cm">Height (cm)</string>
    <string name="live_child">Live Child</string>
    <string name="husband">Husband</string>
    <string name="father">Father</string>
    <string name="husband_father_name">Husband/Father Name</string>
    <string name="lmc_date">LMC Date</string>
    <string name="registration_date">Registration Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="husband_father">Husband/Father</string>
    <string name="domicile_status">Domicile Status</string>
    <string name="caste_category">Caste Category</string>
    <string name="ghumantu">Ghumantu</string>
    <string name="bpl">BPL</string>
    <string name="nfsa_eligible">NFSA Eligibility</string>
    <string name="bpl_card_number">BPL Card Number</string>
    <string name="ration_card_number">Ration Card Number</string>
    <string name="account_name">Account Name</string>
    <string name="sahariya">Sahariya</string>
    <string name="kathodi">Kathodi</string>
    <string name="none">None</string>
    <string name="caste">Caste</string>
    <string name="general">General</string>
    <string name="sc">Schedule Caste</string>
    <string name="st">Schedule Tribe</string>
    <string name="pregnant_woman">Pregnant Woman</string>
    <string name="payment_year">Payment Data of Financial Year:</string>
    <string name="employee_name">Employee Name</string>
    <string name="honorarium_name">Honorarium Employee Name</string>
    <string name="add">Add New</string>
    <string name="quantity">Quantity</string>
    <string name="edit_AWC_Infrastructure_Facilities">Edit Anganwadi Infrastructure Facilities</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Your Password</string>
</resources>