<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile_details" />
        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/job_details" />
        <item
            android:id="@+id/nav_bank"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/bank_details" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_baseline_money_24"
            android:title="@string/payment_details" />
        <item
        android:id="@+id/nav_cards"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="@string/card_details" />

     <!--   <item
            android:id="@+id/change_language"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/change_your_language" />-->
    </group>



</menu>

