<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_app_bg"
    app:ignore="NamespaceTypo">


    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        tool:title="@string/category_details"
        tool:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_12"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_05"
                android:text="@string/domicile_status"
                android:textColor="@color/peach"
                android:textSize="@dimen/textsize_14sp" />

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <RadioButton

                    android:id="@+id/rb_domicileyes"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/rb_domicileno"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="@dimen/textsize_15sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_05"
                android:text="@string/caste"
                android:textColor="@color/peach"
                android:textSize="@dimen/textsize_14sp">

            </androidx.appcompat.widget.AppCompatTextView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <RadioButton
                    android:id="@+id/sc"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sc"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/st"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/st"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/general"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/general"
                    android:textSize="@dimen/textsize_15sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_05"
                android:text="@string/caste_category"
                android:textColor="@color/peach"
                android:textSize="@dimen/textsize_14sp">

            </androidx.appcompat.widget.AppCompatTextView>

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <RadioButton
                    android:id="@+id/sahariya"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sahariya"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/kathodi"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kathodi"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/none"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none"
                    android:textSize="@dimen/textsize_15sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_05"
                android:text="@string/ghumantu"
                android:textColor="@color/peach"
                android:textSize="@dimen/textsize_14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <RadioButton
                    android:id="@+id/ghumantu_yes"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/ghumantu_no"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="@dimen/textsize_15sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_05"
                android:text="@string/bpl"
                android:textColor="@color/peach"
                android:textSize="@dimen/textsize_14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <RadioButton
                    android:id="@+id/bpl_yes"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/bpl_no"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="@dimen/textsize_15sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_05"
                android:text="@string/nfsa_eligible"
                android:textColor="@color/peach"
                android:textSize="@dimen/textsize_14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <RadioButton
                    android:id="@+id/nfsa_yes"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textSize="@dimen/textsize_15sp" />

                <RadioButton
                    android:id="@+id/nfsa_no"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="@dimen/textsize_15sp" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>