<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_app_bg">

    <LinearLayout
        android:id="@+id/largeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_60"
            android:layout_height="@dimen/margin_60"
            android:src="@drawable/app_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_05"
            android:layout_marginLeft="@dimen/margin_05"
            android:text="@string/welcome_text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/largeLabel"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/enter_beneficiary_details"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/mobile_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="@dimen/textsize_12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/aadhar_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_aadhar_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="12"
                android:textSize="@dimen/textsize_12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/janaadhar_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_janadhar_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize_12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/bhamasha_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_bhamashah_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize_12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/buttonbg"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14sp" />

    </LinearLayout>

</RelativeLayout>