<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/childmom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_15"
                android:gravity="center"
                android:text="@string/login_with_your_password"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_25"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/enter_your_password"
                app:hintTextColor="@color/colorPrimaryDark"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/margin_20"
                    android:focusable="true"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:padding="@dimen/margin_10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_16" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot_password"
                android:padding="@dimen/margin_08"
                android:textSize="@dimen/textsize_15sp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:padding="@dimen/margin_08"
                android:visibility="gone"
                android:id="@+id/change_your_password"
                android:textSize="@dimen/textsize_15sp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_login_user"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:gravity="center"
            android:text="@string/your_info_is_safe_text"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/buttonbg"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>